# TokenPulse

./: .gitignore  AGENT_SETUP.md  AUDIT_REPORT.md  BRIEFING.md  BUILD_STATUS.md  CHANGELOG.md  CONTEXT_AUDIT_IMPLEMENTATION_PLAN.md  DASHBOARD_CLARITY_FIX_PLAN.md  DASHBOARD_CLEANUP_SPEC.md  FIRST_TESTER_ONBOARDING.md  GETTING_STARTED.md  LAUNCH_COPY_DRAFT.md  PUBLIC_BETA_CHECKLIST.md  QA_FIRST_TESTER.md  README.md  RELEASE_TESTER_RUNBOOK.md  REPAIR_PLAN.md  REPAIR_REPORT.md  ROADMAP.md  SCREENSHOT_AND_DEMO_CHECKLIST.md  SECURITY.md  VERIFICATION_FLOW_V1.md  agent_verify.py  install.sh  launch-posts-draft.md  package-lock.json  package.json  uninstall.sh  update.json  web-dashboard.py
.github/ISSUE_TEMPLATE/: bug_report.md  onboarding_friction.md  token_or_cost_mismatch.md
.github/workflows/: ci.yml  release.yml
docs/: OPENCLAW_SETUP.md  index.html
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BudgetsPanel.tsx  ModelTable.tsx  Panel.tsx  RangeTabs.tsx  RequestsTable.tsx  StatCard.tsx  StatusPill.tsx
frontend/src/hooks/: usePolling.ts
frontend/src/lib/: api.ts  format.ts
src/: App.jsx
src-tauri/: Cargo.toml  pricing.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  pricing.rs  proxy.rs
src-tauri/tests/: proxy_integration.rs
src/pages/: Dashboard.jsx  Settings.jsx  Setup.jsx  Welcome.jsx
tests/: test_dashboard.py
tests/fixtures/: model_family.json
